2004-05-27  Gareth Owen  <gowen72@yahoo.com>

	* weather.c: Cancelled any outstanding gnome vfs calls when 
	freeing weather_info structure.  Should help with bug #134018

2004-05-13  Davyd Madeley <davyd@ucc.asn.au>

	* gweather-dialog.c: Added a ETCHED_IN border around the Forecast
	dialog.

2004-04-28  Kjartan Maraas  <kmaraas@gnome.org>

	* Locations: Adding cities in Great Britain. Patch from Gareth Owen
	<gowen72 at yahoo com>. Closes bug #140675.
	* Locations: Adding some portugese cities. Patch from Milton Moura
	<mgcm at acm org>. Closes bug #140648.

2004-04-28  Gareth Owen  <gowen72@yahoo.com>

	* gweather-applet.c: Fix for crash when removing second applet.  Fixes
	bug #140964.

2004-04-25  Kevin Vandersloot <kfv101 psu edu>

	* weather.c: Fix for certain invalid conditions. From bug #134452. Patch
	from Arnaud Patard .

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Add ja docs since the original author didn't get back
	to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* docs/Makefile.am: Add l10n'd docs to the build.
	* docs/it/Makefile.am: Point to the proper omf file - I think.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the old sgml docs that we don't need 
	anymore.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>
	
	* docs/*: Localized online help from Sun's translation team for
	de, es, fr, it, ko, sv, zh_CN, zh_HK and zh_TW

2004-03-10  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_get_wind):
	Ditto like the previous commit.

2004-03-10  Dennis Smit  <ds@nerds-incorporated.org>

	* weather.c (weather_info_get_pressure, weather_info_get_visibility):
	Made the buffers a bit longer so international characters do fit
	in the buffer as requested by the Thai translation team.

	Fixes bug #136717.

2004-03-05  Dennis Smit  <ds@nerds-incorporated.org>

	Submitting patch by:
	
	Chris Lahey  <clahey@rigger.boston.ximian.com>
